[package]
name = "gy521-rppal"
version = "0.1.1"
edition = "2021"
authors = ["Braden Everson <bradeneverson@gmail.com>"]
description = "A Rust crate for accessing GY-521 sensor data using the rppal library on a Raspberry Pi."
license = "MIT"
documentation = "https://docs.rs/gy521-rppal"
readme = "README.md"
keywords = ["gy521", "rppal", "raspberry-pi", "i2c"]
categories = ["embedded", "hardware-support"]

[dependencies]
rppal = "0.19.0"
